<resources>
    <!--IT21146374 Sales Management , Sign up, Logging , Home-->
    <string name="app_name">mad-business-android-app</string>
    <string name="emailOrUN">Email or Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="rePW">Re-enter Password</string>
    <string name="INmgt">Inventory \nManagement</string>
    <string name="Smgt">Sales \nManagement</string>
    <string name="Emgt">Expense \nManagement</string>
    <string name="Cmgt">"Customer \nManagement "</string>
    <string name="customerMgt">Customer \nManagement</string>


    <!--IT21214820  Expense Management -->
    <string name="totSpendingView">This month spending</string>
    <string name="month">March</string>
    <string name="date">15</string>
    <string name="history">History</string>
    <string name="Statitics">Statistics</string>
    <string name="electricty">Electricty Bill</string>
    <string name="viewMore">More</string>
    <string name="waterBill">Water Bill</string>
    <string name="transport">Transportation</string>
    <string name="addnewExpense">Add New Expense</string>
    <string name="submit">Submit</string>
    <string name="exp_update">Update</string>
    <string name="exp_delete">Delete</string>
    <string name="Settings">Settings</string>
    <string name="eidt_pro_set">Edit Profile</string>

    <string-array name="expense_cat">
        <item></item>
        <item>Wages and salaries</item>
        <item>Electricty bill</item>
        <item>Water bill</item>
        <item>Telephone bill</item>
        <item>Insurance</item>
        <item>Fuel</item>
        <item>Transportation</item>
        <item>Bank charges</item>
        <item>Loan Interest</item>
        <item>Repair and maintenance</item>
        <item>Rent</item>
        <item>Taxes</item>
        <item>Other</item>
    </string-array>


    <!--IT21214516 Inventory Management -->
    <string name="tvTotalProduct">Total Products</string>
    <string name="tvStockInHand">Stock In Hand</string>
    <string name="btnProductList">View all products</string>
    <string name="tvInventory">Inventory Management</string>
    <string name="tvStock">Stock in hand</string>
    <string name="tvTotalStock">100000</string>
    <string name="btnViewAll">View all Products</string>
    <string name="tvWlcometext">Welcome Back ,</string>
    <string name="tvTotalitems">No of items</string>
    <string name="tvTotalproducts">256</string>
    <string name="btnAddItems">Add</string>
    <string name="done">done</string>
    <string name="tvAddItem">Add Item</string>
    <string name="btnAdditem">Add</string>
    <string name="tvItemName">Name</string>
    <string name="tvItemPrice">Price (Rs.)</string>
    <string name="tvQuantity">Quantity</string>
    <string name="tvUpdateProduct">Update Product</string>
    <string name="btnUpdateProduct">Update</string>
    <string name="addimage">addImage</string>
    <string name="tvProducts">Products</string>
    <string name="btnUpdateProducts">Update</string>
    <string name="btnDelete">Delete</string>
    <string name="edtItemNameUpdate">Handcraft bag</string>
    <string name="edtItemPriceUpdate">Rs. 1250.00</string>
    <string name="edtUpdateQuantity">100</string>
    <string name="tvNoItem">256</string>
    <string name="tvStockHand">108700.00</string>
    <string name="edtProfileName">Mr. Saman Perera</string>
    <string name="tvNoOfItem">259</string>
    <string name="tvIName">Handcraft Bag</string>
    <string name="tvIprice">1250.00</string>
    <string name="tvIquntity">100 pieces</string>
    <string name="tvIName2">Wood statue</string>
    <string name="tvIprice2">5300.00</string>
    <string name="tvIquntity2">25 pieces</string>
    <string name="tvIName3">Pots</string>
    <string name="tvIprice3">350.00</string>
    <string name="tvIquntity3">14 pieces</string>
    <string name="imgProductView2">Woodcraft</string>
    <string name="imgProductView">Handmade bag</string>
    <string name="imgProductView4">Pots</string>
    <string name="tvProPassword">"Password : "</string>
    <string name="edtProPassword">Edward2001</string>
    <string name="tvProName">Nick Edward</string>
    <string name="tvProEmail">nickedward@gmail.com</string>
    <string name="edtProMobile">Mobile</string>
    <string name="edtProTel">Telephone</string>
    <string name="edtProAddress">Address</string>
    <string name="btnProUpdate4">Save</string>
    <string name="tvProUpName">Nick Fernandez</string>
    <string name="etdProUpEmail">nickfernandez@gmail.com</string>
    <string name="edtProUpPassword">NickFdez29</string>
    <string name="edtProUpMobile">+94 715668 128</string>
    <string name="edtProUpTel">0453602226</string>
    <string name="edtProUpdateAddress">474A, Colombo 11</string>
    <string name="tvName2">Wood stature</string>
    <string name="imgUpdate">update Pic</string>


    <!--IT21196188  Customer Management-->
    <string name="btn_search_txt">CREATE</string>
    <string name="btn_back">back</string>
    <string name="txt_user_management">User Management</string>
    <string name="btn_delete_txt">DELETE</string>
    <string name="user_name_txt">User Name</string>
    <string name="btn_analyze_txt">ANALYZE</string>
    <string name="btn_user_create_txt">Create User</string>
    <string name="ptxt_name">Name</string>
    <string name="ptxt_address">Address</string>
    <string name="ptxt">Age</string>
    <string name="ptxt_number">Phone Number</string>
    <string name="check_box_male">Male</string>
    <string name="check_box_female">Female</string>
    <string name="txt_payment">Payment Type</string>
    <string name="check_box_agree">Agree terms and conditions</string>
    <string name="ptxt_email">Email</string>
    <string name="txt_update_user">Update User</string>
    <string name="btn_update_txt">Update</string>
    <string name="txt_rating">Add Rating</string>
    <string name="txt_user_analyze">Analyze</string>
    <string name="txt_existing_user">Existing Users</string>
    <string name="txt_removed_user">Removed Users</string>
    <string name="txt_max_rating">Maximum Rating</string>
    <string name="txt_average">Average Rating</string>
    <string name="txt_maximum">Maximum Rating</string>
    <string name="txt_minimum">Minimum Rating</string>
    <string name="expense_id">Expense Id</string>
    <string name="_125000_00">125000.00</string>
    <string name="edit_products">Edit_products</string>
    <string name="stock_in_hand_rs">Stock in hand (Rs.)</string>
    <string name="inventory_management">Inventory Management</string>
    <string name="update_data">Update data</string>
    <string name="edit_products2">Edit Products</string>

    <string name="txt_notification">Notification</string>
    <string name="notification_message">Notification Message</string>
    <string name="gender">Gender</string>


</resources>