<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/custom_card_view_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_theam"
    android:backgroundTint="@color/app_theam"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/mainCardView"
        android:layout_width="0dp"
        android:layout_height="715dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/bkg_customer"
        app:cardBackgroundColor="@color/app_theam_light"
        app:cardCornerRadius="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="693dp"
            android:backgroundTint="@color/app_theam">

            <EditText
                android:id="@+id/userCreateAge"
                android:layout_width="374dp"
                android:layout_height="48dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/ptxt"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userCreateAddress" />

            <EditText
                android:id="@+id/userCreateName"
                android:layout_width="374dp"
                android:layout_height="48dp"
                android:layout_marginStart="7dp"
                android:ems="10"
                android:hint="@string/ptxt_name"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userCrtImage" />

            <Button
                android:id="@+id/userCreateBtnTwo"
                android:layout_width="163dp"
                android:layout_height="50dp"
                android:layout_marginStart="232dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/create_button"
                android:text="@string/btn_search_txt"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userCrtAgree"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/userCrtImage"
                android:layout_width="164dp"
                android:layout_height="115dp"
                android:layout_marginStart="130dp"
                android:layout_marginEnd="130dp"
                android:foregroundGravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/customer" />

            <EditText
                android:id="@+id/userCreateTel"
                android:layout_width="374dp"
                android:layout_height="48dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/ptxt_number"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userCreateAge" />

            <EditText
                android:id="@+id/userCreateAddress"
                android:layout_width="374dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/ptxt_address"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userCreateName" />

            <CheckBox
                android:id="@+id/userCreateMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="@string/check_box_male"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userCreateTel" />

            <CheckBox
                android:id="@+id/userCreateFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:text="@string/check_box_female"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userCreateTel" />

            <TextView
                android:id="@+id/userCreatePayment"
                android:layout_width="374dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:text="@string/txt_payment"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userCrtEmail" />

            <Spinner
                android:id="@+id/userCreatePaymentSpinner"
                android:layout_width="374dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userCreatePayment"
                tools:ignore="SpeakableTextPresentCheck" />

            <CheckBox
                android:id="@+id/userCrtAgree"
                android:layout_width="374dp"
                android:layout_height="48dp"
                android:layout_marginStart="7dp"
                android:text="@string/check_box_agree"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userCreatePaymentSpinner" />

            <EditText
                android:id="@+id/userCrtEmail"
                android:layout_width="374dp"
                android:layout_height="48dp"
                android:layout_marginStart="7dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userCreateMale" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/userAnalyzeBtn"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:contentDescription="@string/btn_back"
        app:backgroundTint="@color/app_theam_light"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_new_24"
        app:tint="@color/app_theam"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/userAnalyzeTitle"
        android:layout_width="374dp"
        android:layout_height="78dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/btn_user_create_txt"
        android:textColor="@color/white"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>

