<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnDelete3"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="426dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/btnDelete"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUpdateProducts3"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="192dp"
        android:layout_marginBottom="255dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/btnUpdateProducts"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvProductCard2"
        android:layout_width="382dp"
        android:layout_height="192dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/bkg_inventory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProductCard" />

    <ImageView
        android:id="@+id/imgProductView2"
        android:layout_width="171dp"
        android:layout_height="113dp"
        android:layout_marginStart="-370dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/imgProductView2"
        app:layout_constraintStart_toEndOf="@+id/tvProductCard2"
        app:layout_constraintTop_toBottomOf="@+id/tvProductCard"
        app:srcCompat="@drawable/elephant" />

    <TextView
        android:id="@+id/tvProductCard3"
        android:layout_width="382dp"
        android:layout_height="192dp"
        android:layout_marginTop="509dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/bkg_inventory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgProductView4"
        android:layout_width="171dp"
        android:layout_height="113dp"
        android:layout_marginStart="-370dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/imgProductView4"
        app:layout_constraintStart_toEndOf="@+id/tvProductCard3"
        app:layout_constraintTop_toBottomOf="@+id/tvProductCard2"
        app:srcCompat="@drawable/pots" />

    <Button
        android:id="@+id/btnDelete2"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="41dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/btnDelete"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnUpdateProducts2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="41dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/btnUpdateProducts"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvProducts"
        android:layout_width="401dp"
        android:layout_height="64dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bkg_inventory"
        android:text="@string/tvProducts"
        android:textAlignment="center"
        android:textColor="@color/app_theam_light"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvProductCard"
        android:layout_width="382dp"
        android:layout_height="192dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bkg_inventory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProducts" />

    <Button
        android:id="@+id/btnUpdateProducts"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="213dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/btnUpdateProducts"
        app:cornerRadius="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="213dp"
        android:layout_marginEnd="26dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/btnDelete"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIName"
        android:layout_width="174dp"
        android:layout_height="41dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_bkg"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tvIName"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_neutral0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIName2"
        android:layout_width="174dp"
        android:layout_height="41dp"
        android:layout_marginTop="309dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/edit_text_bkg"
        android:text="@string/tvIName2"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_neutral0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIName3"
        android:layout_width="174dp"
        android:layout_height="41dp"
        android:layout_marginTop="519dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/edit_text_bkg"
        android:text="@string/tvIName3"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_neutral0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIprice"
        android:layout_width="174dp"
        android:layout_height="41dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_bkg"
        android:text="@string/tvIprice"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_neutral0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIprice2"
        android:layout_width="174dp"
        android:layout_height="41dp"
        android:layout_marginTop="367dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_bkg"
        android:text="@string/tvIprice2"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_neutral0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIprice3"
        android:layout_width="174dp"
        android:layout_height="41dp"
        android:layout_marginTop="577dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_bkg"
        android:text="@string/tvIprice3"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_neutral0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIquntity"
        android:layout_width="127dp"
        android:layout_height="50dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="212dp"
        android:background="@drawable/edit_text_bkg"
        android:text="@string/tvIquntity"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_neutral0"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIquntity2"
        android:layout_width="127dp"
        android:layout_height="50dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="426dp"
        android:background="@drawable/edit_text_bkg"
        android:text="@string/tvIquntity2"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_neutral0"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIquntity3"
        android:layout_width="127dp"
        android:layout_height="50dp"
        android:layout_marginStart="37dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/edit_text_bkg"
        android:text="@string/tvIquntity3"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_neutral0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgProductView"
        android:layout_width="166dp"
        android:layout_height="107dp"
        android:layout_marginStart="-370dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/imgProductView"
        app:layout_constraintStart_toEndOf="@+id/tvProductCard"
        app:layout_constraintTop_toBottomOf="@+id/tvProducts"
        app:srcCompat="@drawable/bohemian_bags_purses" />

</androidx.constraintlayout.widget.ConstraintLayout>