<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:layout_editor_absoluteX="-4dp"
    tools:layout_editor_absoluteY="0dp">

    <EditText
        android:id="@+id/edtUpdateQuantity"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/edit_text_bkg"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/edtUpdateQuantity"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtItemPriceUpdate" />

    <TextView
        android:id="@+id/tvQuantityUpdate"
        android:layout_width="91dp"
        android:layout_height="39dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/tvQuantity"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/edtUpdateQuantity"
        app:layout_constraintTop_toBottomOf="@+id/tvItemPriceUpdate" />

    <EditText
        android:id="@+id/edtItemNameUpdate"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/edit_text_bkg"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/edtItemNameUpdate"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgUpdate" />

    <TextView
        android:id="@+id/tvItemPriceUpdate"
        android:layout_width="73dp"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/tvItemPrice"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/edtItemPriceUpdate"
        app:layout_constraintTop_toBottomOf="@+id/tvItemNameupdate" />

    <EditText
        android:id="@+id/edtItemPriceUpdate"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/edit_text_bkg"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/edtItemPriceUpdate"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtItemNameUpdate" />

    <TextView
        android:id="@+id/tvItemNameupdate"
        android:layout_width="67dp"
        android:layout_height="30dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/tvItemName"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/edtItemNameUpdate"
        app:layout_constraintTop_toBottomOf="@+id/imgUpdate" />

    <Button
        android:id="@+id/btnUpdateProduct"
        android:layout_width="130dp"
        android:layout_height="49dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="141dp"
        android:backgroundTint="@color/app_theam"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btnUpdateProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUpdateQuantity" />

    <ImageButton
        android:id="@+id/imgUpdate"
        android:layout_width="342dp"
        android:layout_height="209dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="23dp"
        android:contentDescription="@string/imgUpdate"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fab_back3"
        app:srcCompat="@drawable/bohemian_bags_purses" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_back3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:backgroundTint="@color/app_theam_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_new_24"
        app:tint="@color/app_theam"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvUpdateProduct"
        android:layout_width="306dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/bkg_inventory"
        android:text="@string/tvUpdateProduct"
        android:textAlignment="center"
        android:textColor="@color/app_theam_light"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>